# suggesify

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  Singularity  activation.cu  build.sbt  constants.h  gpuSort.h  gpuTypes.cpp  layer.h  recs.sln  recs.vcxproj  recs.vcxproj.filters  setup.py  sugesstify.sln  sugesstify.vcxproj  types.cpp  weight.h
.bloop/: root-test.json  root.json
batch_manager/: BatchManager.h  GptManager.h  allocateKvCache.h  assignReqSeqSlots.h  capacityScheduler.h  evictionPolicy.h  guidedDecoder.h  inferenceRequest.h  kvCacheEventManager.h  kvCacheManager.h  kvCacheTransferManager.h  kvCacheUtils.h  llmRequest.h  microBatchScheduler.h  pauseRequests.h  peftCacheManager.h  rnnStateManager.h  sequenceSlotManager.h  trtGptModelOptionalParams.h
common/: arrayView.h  assert.h  cublasMMWrapper.cpp  cudaDriverWrapper.cpp  cudaDriverWrapper.h  cudaFp8Utils.cu  cudaProfilerUtils.cpp  cudaUtils.h  customAllReduceUtils.h  dataType.h  envUtils.cpp  envUtils.h  jsonSerializeOptional.h  logger.h  mathUtils.h  memoryUtils.cuh  memoryUtils.h  mpiUtils.cpp  mpiUtils.h  opUtils.cpp  quantTypeUtils.cuh  reduceKernelUtils.cuh  safetensors.cpp  stlUtils.h  stringUtils.cpp  tllmException.cpp  tllmException.h  utils.h  workspace.h
docker/: Dockerfile.multi  Makefile
executor/: executor.h  serialization.h  tensor.h
executor_worker/: executorWorker.cpp
front/: allgatherOp.cpp  allreduceOp.cpp  convertSpecDecodingMaskToPackedMaskOp.cpp  cublasScaledMM.cpp  cutlassScaledMM.cpp  dynamicDecodeOp.cpp  dynamicDecodeOp.h  fmhaPackMaskOp.cpp  fp8Op.cpp  gatherTreeOp.cpp  moeOp.cpp  ncclCommunicatorOp.cpp  ncclCommunicatorOp.h  parallelDecodeKVCacheUpdateOp.cpp  redrafterCurandOp.cpp  relativeAttentionBiasOp.cpp  thUtils.h  weightOnlyQuantOp.cpp
java/: pom.xml
knn/: dataReader.h  exactGpu.h
layers/: banWordsLayer.cpp  banWordsLayer.h  baseLayer.h  beamSearchLayer.cpp  beamSearchLayer.h  decodingLayer.cpp  decodingLayer.h  decodingParams.h  dynamicDecodeLayer.cpp  dynamicDecodeLayer.h  eagleDecodingLayer.cpp  eagleDecodingLayer.h  explicitDraftTokensLayer.cpp  explicitDraftTokensLayer.h  externalDraftTokensLayer.cpp  externalDraftTokensLayer.h  layerUtils.h  layersFactory.h  lookaheadAlgorithm.cpp  lookaheadAlgorithm.h  lookaheadDecodingLayer.cpp  lookaheadDecodingLayer.h  lookaheadDecodingUtils.h  lookaheadPoolManager.cpp  lookaheadPoolManager.h  medusaDecodingLayer.cpp  medusaDecodingLayer.h  penaltyLayer.cpp  penaltyLayer.h  samplingLayer.cpp  samplingLayer.h  (+6 more)
tests/gputests/: CMakeLists.txt  testActivationFunctions.cpp  testCostFunctions.cpp  testDune.cpp  testGpu.cpp  testSort.cpp  testUtils.h
tests/unittests/: CMakeLists.txt  main.cpp  testNetCDFhelper.cpp  testUtils.cpp
(+2131 files in other folders)
